--- a/css/style.css
+++ b/css/style.css
@@ -1,277 +1,7 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
-}
-
-header {
-  margin-top: 0;
-  position: fixed;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 97.4%;
-  height: 70px;
-  background-color: #0b2c48;
-  padding: 0 20px;
-}
-.logo img {
-  position: absolute;
-  left: 190px;
-  top: 25px;
-  width: 160px;
-  height: auto;
-}
-.nav-menu {
-  position: absolute;
-  top: 25px;
-  left: 370px;
-}
-.nav-menu ul {
-  list-style: none;
-  display: flex;
-  padding: 0 10px;
-  margin: 0px;
-}
-
-.nav-menu ul li {
-  position: relative;
-  margin: 0 15px;
-}
-
-.nav-menu ul li a {
-  text-decoration: none;
-  color: white;
-  font-weight: bold;
-  font-size: 16px;
-}
-
-.header-right {
-  display: flex;
-  align-items: center;
-  position: absolute;
-  left: 900px;
-  top: 22px;
-}
-
-.header-right img {
-  width: 25px;
-  margin: 0 10px;
-}
-
-.switch-lang {
-  text-align: center;
-  border: 2px solid white;
-  width: 24px;
-  height: 20px;
-  padding: 2px;
-
-  color: white;
-  font-size: 14px;
-  font-weight: bold;
-  margin-right: 15px;
-  border-radius: 5px;
-  text-align: center;
-}
-.switch-lang:hover {
-  background-color: white;
-  color: black;
-  transition: all 0.3s;
-}
-
-.header-right ul {
-  list-style: none;
-  display: flex;
-  margin: 0;
-  padding: 0;
-}
-
-.header-right ul li {
-  margin: 0 10px;
-}
-
-.header-right ul li a {
-  text-decoration: none;
-  color: white;
-  font-weight: bold;
-}
-
-.dropDown {
-  display: none;
-  position: absolute;
-  width: 150px;
-  height: 200px;
-  background-color: white;
-  border-radius: 10px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-  z-index: 1000;
-}
-
-.nav-menu ul li:hover .dropDown {
-  display: block;
-  opacity: 1;
-  visibility: visible;
-}
-.dropDown ul {
-  display: flex;
-  flex-direction: column;
-  gap: 1px;
-  margin: 0px;
-  padding: 0;
-}
-
-.dropDown ul li {
-  margin: 0;
-  padding: 3px;
-  margin-bottom: 8px;
-}
-
-.dropDown ul li a {
-  font-size: 13px;
-  padding: 10px;
-  color: black;
-  display: block;
-}
-.dropDown1 {
-  display: none;
-  position: absolute;
-  width: 150px;
-  height: 200px;
-  background-color: white;
-  border-radius: 10px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-  z-index: 1000;
-}
-
-.nav-menu ul li:hover .dropDown1 {
-  display: block;
-  opacity: 1;
-  visibility: visible;
-}
-.dropDown1 ul {
-  display: flex;
-  flex-direction: column;
-  gap: 1px;
-  margin: 0px;
-  padding: 0;
-}
-
-.dropDown1 ul li {
-  margin: 0;
-  padding: 3px;
-  margin-bottom: 8px;
-}
-
-.dropDown1 ul li a {
-  font-size: 13px;
-  padding: 10px;
-  color: black;
-  display: block;
-}
-.dropDown2 {
-  display: none;
-  position: absolute;
-  width: 150px;
-  height: 45px;
-  background-color: white;
-  border-radius: 10px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-  z-index: 1000;
-}
-
-.nav-menu ul li:hover .dropDown2 {
-  display: block;
-  opacity: 1;
-  visibility: visible;
-}
-.dropDown2 ul {
-  display: flex;
-  flex-direction: column;
-  gap: 1px;
-  margin: 0px;
-  padding: 0;
-}
-
-.dropDown2 ul li {
-  margin: 0;
-  padding: 3px;
-  margin-bottom: 8px;
-}
-
-.dropDown2 ul li a {
-  font-size: 13px;
-  padding: 10px;
-  color: black;
-  display: block;
-}
-.dropDown3 {
-  display: none;
-  position: absolute;
-  width: 150px;
-  height: 200px;
-  background-color: white;
-  border-radius: 10px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-  z-index: 1000;
-}
-
-.nav-menu ul li:hover .dropDown3 {
-  display: block;
-  opacity: 1;
-  visibility: visible;
-}
-.dropDown3 ul {
-  display: flex;
-  flex-direction: column;
-  gap: 1px;
-  margin: 0px;
-  padding: 0;
-}
-
-.dropDown3 ul li {
-  margin: 0;
-  padding: 3px;
-  margin-bottom: 8px;
-}
-
-.dropDown3 ul li a {
-  font-size: 13px;
-  padding: 10px;
-  color: black;
-  display: block;
-}
-.search-box {
-  z-index: -1;
-  position: fixed;
-  top: 70px;
-  display: inline-block;
-}
-
-.search-icon {
-  position: absolute;
-  left: 190px;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 16px;
-  height: 16px;
-}
-
-.search-box input {
-  width: 1312px;
-  height: 30px;
-  padding: 8px 12px 8px 210px;
-  border: 1px solid #ccc;
-  font-size: 14px;
-  outline: none;
-}
 .homeMenu {
   background-color: rgba(0, 0, 0, 0.7);
-  position: absolute;
-  top: 117px;
-  left: 130px;
   width: 1280px;
   height: 500px;
-
   display: flex;
   gap: 0;
   z-index: -10;
@@ -331,9 +61,6 @@ header {
 
 /* movies-carusel */
 .movies-carusel {
-  position: relative;
-  z-index: -10;
-  padding-top: 600px;
   width: 100%;
 }
 
@@ -423,8 +150,6 @@ header {
 
 /*video-carusel */
 .videos-carusel {
-  position: relative;
-  z-index: -10;
   width: 100%;
   background: url(/images/video-carusel/video1.jpg) no-repeat;
   background-size: cover;
@@ -527,19 +252,51 @@ header {
 
 /* movies-carusel-2 */
 #movie-list-2 {
-  position: relative;
-  z-index: -10;
   background: none;
 }
 
 /* edit-section*/
 .edit-section {
-  position: relative;
-  z-index: -10;
   margin-top: 20px;
 }
 .level {
   margin-left: 20px;
+}
+
+
+/* banner */
+.banner {
+  width: 100%;
+  height: 270px;
+  background: url(/images/BannerBgImg.jpg) no-repeat;
+  background-size: cover;
+}
+
+.bannerWriters h2 {
+  font-weight: bold;
+  font-size: 35px;
+  color: #fff;
+}
+.bannerWriters p {
+  color: #fff;
+  font-weight: bold;
+  font-size: 20px;
+}
+.bannerWriters button {
+  color: #fff;
+  font-weight: bold;
+  font-size: 16px;
+  background-color: rgb(128, 91, 231);
+  border: 2px solid rgb(128, 91, 231);
+  border-radius: 5px;
+  width: 220px;
+  height: 35px;
+  cursor: pointer;
+}
+
+/* list people */
+.listOfPeople {
+  width: 100%;
 }
 
 .sign {
@@ -566,534 +323,109 @@ header {
   border-radius: 50%;
   background-image: linear-gradient(90deg, #fcbe6f, #da3d63);
 }
-
-.banner {
-  position: absolute;
-  width: 100%;
-  height: 500px;
-  z-index: -10px;
-}
-.bannerImg {
-  position: relative;
-}
-.banner .bannerImg img {
-  z-index: -10px;
-  background-size: cover;
-  width: 100%;
-  height: 250px;
-}
-.bannerImg::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  top: 0;
-  background-color: rgba(0, 0, 0, 0.633);
-}
-.bannerWriters {
-  position: absolute;
-  top: 10px;
-  left: 200px;
-}
-.bannerWriters h2 {
-  font-weight: bold;
-  font-size: 35px;
-  color: #fff;
-}
-.bannerWriters p {
-  color: #fff;
-  font-weight: bold;
-  font-size: 20px;
-}
-.bannerWriters button {
-  color: #fff;
-  font-weight: bold;
-  font-size: 16px;
-  background-color: rgb(128, 91, 231);
-  border: 2px solid rgb(128, 91, 231);
-  border-radius: 5px;
-  width: 220px;
-  height: 35px;
-}
-.listOfPeople {
-  width: 100%;
-  height: 90%;
-  position: absolute;
-  top: 290%;
-  left: 0px;
-  z-index: -10;
-}
 .Peoples {
-  position: relative;
-  top: 120px;
-  left: 150px;
-  background-size: cover;
-  cursor: pointer;
+  width: 50%;
+  padding-left: 20px;
+}
+
+.left{
+  margin-left: 10px;
 }
 .Peoples img {
   border-radius: 50%;
 }
 
-.listWriters {
-  position: absolute;
+.listWriters{
+  margin-left: 10px;
 }
+
 .listWriters h2 {
-  position: relative;
-  left: 200px;
-  top: 30px;
   font-size: 25px;
 }
-.BlueStick {
-  position: relative;
-  left: 400px;
-  top: -50px;
+
+.BlueStick{
+  align-items: center;
 }
+
+.sticks{
+  margin: 15px 0 0 25px;
+}
+
 .BlueStick .divBlue {
-  position: relative;
-  left: -15px;
-  top: 30px;
   width: 10px;
   height: 10px;
   background-color: rgb(0, 255, 60);
   border-radius: 50%;
+  margin-right: 5px;
 }
-.RedStick {
-  position: relative;
-  left: 400px;
-  top: -80px;
+
+.sticks p{
+  margin: 5px;
+  font-size: .7rem;
 }
+
+.RedStick{
+  align-items: center;
+}
+
 .RedStick .divRed {
-  position: relative;
-  left: -15px;
-  top: 30px;
   width: 10px;
   height: 10px;
   background-color: rgb(255, 153, 0);
   border-radius: 50%;
-}
-.Shei h2 {
-  position: relative;
-  top: -85px;
-  left: 90px;
-}
-.Shei_Green {
-  position: relative;
-  top: -100px;
-  left: 85px;
-  width: 300px;
-  border-radius: 20px;
-  height: 5px;
-  background-color: rgb(0, 255, 60);
-}
-.Shei_GreenOne {
-  font-weight: bold;
-  position: relative;
-  left: 390px;
-  top: -135px;
-}
-.Shei_Red {
-  position: relative;
-  top: -90px;
-  left: 85px;
-  width: 450px;
-  height: 5px;
-  border-radius: 20px;
-  background-color: rgb(255, 153, 0);
-}
-.Shei_GreenTwo {
-  font-weight: bold;
-  position: relative;
-  left: 540px;
-  top: -153px;
-}
-.Ceru {
-  position: absolute;
-  top: 80px;
+  margin-right: 5px;
 }
 
-.Ceru h2 {
-  position: relative;
-  top: -85px;
-  left: 90px;
-}
-.Ceru_Green {
-  position: relative;
-  top: -100px;
-  left: 85px;
-  width: 450px;
-  border-radius: 20px;
-  height: 5px;
-  background-color: rgb(0, 255, 60);
-}
-.Ceru_GreenOne {
-  font-weight: bold;
-  position: relative;
-  left: 540px;
-  top: -135px;
-}
-.Ceru_Red {
-  position: relative;
-  top: -90px;
-  left: 85px;
-  width: 250px;
-  height: 5px;
-  border-radius: 20px;
-  background-color: rgb(255, 153, 0);
-}
-.Ceru_GreenTwo {
-  font-weight: bold;
-  position: relative;
-  left: 340px;
-  top: -153px;
-}
-.Capicorn {
-  position: absolute;
-  top: 160px;
+.person{
+  margin-top: 15px;
 }
 
-.Capicorn h2 {
-  position: relative;
-  top: -85px;
-  left: 90px;
-}
-.Capicorn_Green {
-  position: relative;
-  top: -100px;
-  left: 85px;
-  width: 50px;
-  border-radius: 20px;
-  height: 5px;
-  background-color: rgb(0, 255, 60);
-}
-.Capicorn_GreenOne {
-  font-weight: bold;
-  position: relative;
-  left: 140px;
-  top: -135px;
-}
-.Capicorn_Red {
-  position: relative;
-  top: -90px;
-  left: 85px;
-  width: 100px;
-  height: 5px;
-  border-radius: 20px;
-  background-color: rgb(255, 153, 0);
-}
-.Capicorn_GreenTwo {
-  font-weight: bold;
-  position: relative;
-  left: 190px;
-  top: -153px;
-}
-.Samara {
-  position: absolute;
-  top: 330px;
+.person img{
+  width: 60px;
+  height: 60px;
 }
 
-.Samara h2 {
-  position: relative;
-  top: -85px;
-  left: 90px;
-}
-.Samara_Green {
-  position: relative;
-  top: -100px;
-  left: 85px;
-  width: 250px;
-  border-radius: 20px;
-  height: 5px;
-  background-color: rgb(0, 255, 60);
-}
-.Samara_GreenOne {
-  font-weight: bold;
-  position: relative;
-  left: 340px;
-  top: -135px;
-}
-.Samara_Red {
-  position: relative;
-  top: -90px;
-  left: 85px;
-  width: 400px;
-  height: 5px;
-  border-radius: 20px;
-  background-color: rgb(255, 153, 0);
-}
-.Samara_GreenTwo {
-  font-weight: bold;
-  position: relative;
-  left: 490px;
-  top: -153px;
+.person-rate{
+  margin-left: 15px;
 }
 
-.Qualitylover {
-  position: absolute;
-  top: 250px;
+.person_name{
+  font-weight: 600;
+  font-size: 1.2em;
+  margin: 0;
 }
 
-.Qualitylover h2 {
-  position: relative;
-  top: -85px;
-  left: 90px;
-}
-.Qualitylover_Green {
-  position: relative;
-  top: -100px;
-  left: 85px;
-  width: 100px;
-  border-radius: 20px;
-  height: 5px;
-  background-color: rgb(0, 255, 60);
-}
-.Qualitylover_GreenOne {
-  font-weight: bold;
-  position: relative;
-  left: 190px;
-  top: -135px;
-}
-.Qualitylover_Red {
-  position: relative;
-  top: -90px;
-  left: 85px;
-  width: 50px;
-  height: 5px;
-  border-radius: 20px;
-  background-color: rgb(255, 153, 0);
-}
-.Qualitylover_GreenTwo {
-  font-weight: bold;
-  position: relative;
-  left: 140px;
-  top: -153px;
-}
-/*Peoples 2*/
-.Peoples2 {
-  position: absolute;
-  top: 120px;
-  left: 830px;
-}
-.Peoples2 img {
-  background-size: cover;
-  cursor: pointer;
-  border-radius: 50%;
+.greenOne{
+  align-items: center;
 }
 
-.chkchkboom h2 {
-  position: relative;
-  top: -85px;
-  left: 90px;
-}
-.chkchkboom_Green {
-  position: relative;
-  top: -100px;
-  left: 85px;
-  width: 150px;
-  border-radius: 20px;
-  height: 5px;
-  background-color: rgb(0, 255, 60);
-}
-.chkchkboom_GreenOne {
-  width: auto;
+.greenOne p{
+  margin: 0;
+  font-size: .9em;
   font-weight: bold;
-  position: relative;
-  left: 240px;
-  top: -135px;
-}
-.chkchkboom_Red {
-  position: relative;
-  top: -90px;
-  left: 85px;
-  width: 225px;
-  height: 5px;
-  border-radius: 20px;
-  background-color: rgb(255, 153, 0);
-}
-.chkchkboom_GreenTwo {
-  font-weight: bold;
-  position: relative;
-  left: 316px;
-  top: -153px;
-}
-.Il_Cinepatica {
-  position: absolute;
-  top: 80px;
 }
 
-.Il_Cinepatica h2 {
-  position: relative;
-  top: -85px;
-  left: 90px;
-}
-.Il_Cinepatica_Green {
-  position: relative;
-  top: -100px;
-  left: 85px;
-  width: 225px;
-  border-radius: 20px;
-  height: 5px;
-  background-color: rgb(0, 255, 60);
-}
-.Il_Cinepatica_GreenOne {
-  font-weight: bold;
-  position: relative;
-  left: 313px;
-  top: -135px;
-}
-.Il_Cinepatica_Red {
-  position: relative;
-  top: -90px;
-  left: 85px;
-  width: 125px;
-  height: 5px;
-  border-radius: 20px;
-  background-color: rgb(255, 153, 0);
-}
-.Il_Cinepatica_GreenTwo {
-  font-weight: bold;
-  position: relative;
-  left: 215px;
-  top: -153px;
-}
-.CXC600 {
-  position: absolute;
-  top: 160px;
+.redOne{
+  align-items: center;
 }
 
-.CXC600 h2 {
-  position: relative;
-  top: -85px;
-  left: 90px;
-}
-.CXC600_Green {
-  position: relative;
-  top: -100px;
-  left: 85px;
-  width: 25px;
-  border-radius: 20px;
-  height: 5px;
-  background-color: rgb(0, 255, 60);
-}
-.CXC600_GreenOne {
+.redOne p{
+  margin: 0;
+  font-size: .9em;
   font-weight: bold;
-  position: relative;
-  left: 115px;
-  top: -135px;
-}
-.CXC600_Red {
-  position: relative;
-  top: -90px;
-  left: 85px;
-  width: 50px;
-  height: 5px;
-  border-radius: 20px;
-  background-color: rgb(255, 153, 0);
-}
-.CXC600_GreenTwo {
-  font-weight: bold;
-  position: relative;
-  left: 140px;
-  top: -153px;
-}
-.ggalarza25 {
-  position: absolute;
-  top: 330px;
 }
 
-.ggalarza25 h2 {
-  position: relative;
-  top: -85px;
-  left: 90px;
-}
-.ggalarza25_Green {
-  position: relative;
-  top: -100px;
-  left: 85px;
-  width: 125px;
+.person_Green{
+  width: calc(var(--value) * 0.0024px);
+  height: 7px;
   border-radius: 20px;
-  height: 5px;
-  background-color: rgb(0, 255, 60);
-}
-.ggalarza25_GreenOne {
-  font-weight: bold;
-  position: relative;
-  left: 215px;
-  top: -135px;
-}
-.ggalarza25_Red {
-  position: relative;
-  top: -90px;
-  left: 85px;
-  width: 200px;
-  height: 5px;
-  border-radius: 20px;
-  background-color: rgb(255, 153, 0);
-}
-.ggalarza25_GreenTwo {
-  font-weight: bold;
-  position: relative;
-  left: 288px;
-  top: -153px;
+  background-image: linear-gradient(to right,#BDFDCE, #25D7AB);
+  margin: 0;
 }
 
-.raze464 {
-  position: absolute;
-  top: 250px;
-}
-
-.raze464 h2 {
-  position: relative;
-  top: -85px;
-  left: 90px;
-}
-.raze464_Green {
-  position: relative;
-  top: -100px;
-  left: 85px;
-  width: 50px;
+.person_Red{
+  width: calc(var(--value) * 0.032px);
+  height: 7px;
   border-radius: 20px;
-  height: 5px;
-  background-color: rgb(0, 255, 60);
-}
-.raze464_GreenOne {
-  font-weight: bold;
-  position: relative;
-  left: 140px;
-  top: -135px;
-}
-.raze464_Red {
-  position: relative;
-  top: -90px;
-  left: 85px;
-  width: 25px;
-  height: 5px;
-  border-radius: 20px;
-  background-color: rgb(255, 153, 0);
-}
-.raze464_GreenTwo {
-  font-weight: bold;
-  position: relative;
-  left: 115px;
-  top: -153px;
-}
-.raze464 img {
-  width: 65px;
-  height: 65px;
-}
-.ggalarza25 img {
-  width: 65px;
-  height: 65px;
-}
-.CXC600 img {
-  width: 65px;
-  height: 65px;
-}
-.Il_Cinepatica img {
-  width: 65px;
-  height: 65px;
-}
-.chkchkboom img {
-  width: 65px;
-  height: 65px;
+  background-image: linear-gradient(to right,#FDC070, #DA3E63);
 }
