--- a/css/style.css
+++ b/css/style.css
@@ -5,27 +5,23 @@ body {
 }
 
 header {
-  margin-top: 0;
-  position: fixed;
+  width: 100%;
+  height: 70px;
+
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 97.4%;
-  height: 70px;
   background-color: #0b2c48;
   padding: 0 20px;
 }
+
 .logo img {
-  position: absolute;
-  left: 190px;
-  top: 25px;
   width: 160px;
   height: auto;
 }
 .nav-menu {
-  position: absolute;
-  top: 25px;
-  left: 370px;
+  text-align: center;
+  margin-left: 180px;
 }
 .nav-menu ul {
   list-style: none;
@@ -35,7 +31,6 @@ header {
 }
 
 .nav-menu ul li {
-  position: relative;
   margin: 0 15px;
 }
 
@@ -241,10 +236,7 @@ header {
   display: block;
 }
 .search-box {
-  z-index: -1;
-  position: fixed;
-  top: 70px;
-  display: inline-block;
+  z-index: 10;
 }
 
 .search-icon {
@@ -264,49 +256,13 @@ header {
   font-size: 14px;
   outline: none;
 }
+
 .homeMenu {
-  background-color: rgba(0, 0, 0, 0.7);
-  position: absolute;
-  top: 117px;
-  left: 130px;
-  width: 1280px;
-  height: 500px;
-
-  display: flex;
-  gap: 0;
-  z-index: -10;
-}
-
-.Images {
-  display: flex;
-  margin: 0;
-  padding: 0;
-  position: relative;
-}
-
-.Images::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  top: 0;
-  background-color: rgba(0, 0, 0, 0.633);
-}
-
-.Images img {
-  width: 259px;
-  height: 500px;
-  margin: 0;
-  padding: 0;
-  object-fit: cover;
-}
-
-.homeMenu .writers {
-  position: absolute;
-  left: 50px;
-  top: 100px;
-  z-index: 1;
+  background: url(/images/bgImg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 480px;
 }
 
 .homeMenu h1 {
@@ -331,9 +287,6 @@ header {
 
 /* movies-carusel */
 .movies-carusel {
-  position: relative;
-  z-index: -10;
-  padding-top: 600px;
   width: 100%;
 }
 
