--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,28 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
   cursor: pointer;
   font-family: 'Source Sans Pro', Arial, sans-serif;
 }
 
+body::-webkit-scrollbar{
+  width: 8px; 
+}
+
+body::-webkit-scrollbar-thumb{
+  background-color: #44444454;
+  border-radius: 4px; 
+}
+
 .container {
   margin: 0 auto;
-  width: 1300px;
+  max-width: 1300px;
+  width: 100%;
+  padding: 12px;
 }
 
 .flex {
@@ -45,13 +59,282 @@ body {
   color: white;
 }
 
-/* Footer */
-.footer {
+/* header */
+
+header {
+  margin-top: 0;
+  position: fixed;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 97.4%;
+  height: 70px;
+  background-color: #0b2c48;
+  padding: 0 20px;
+  z-index: 10;
+}
+.logo img {
   position: absolute;
-  top: 380%;
+  left: 190px;
+  top: 25px;
+  width: 160px;
+  height: auto;
+}
+.nav-menu {
+  position: absolute;
+  top: 25px;
+  left: 370px;
+}
+.nav-menu ul {
+  list-style: none;
+  display: flex;
+  padding: 0 10px;
+  margin: 0px;
+}
+
+.nav-menu ul li {
+  position: relative;
+  margin: 0 15px;
+}
+
+.nav-menu ul li a {
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.header-right {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  left: 900px;
+  top: 22px;
+}
+
+.header-right img {
+  width: 25px;
+  margin: 0 10px;
+}
+
+.switch-lang {
+  text-align: center;
+  border: 2px solid white;
+  width: 24px;
+  height: 20px;
+  padding: 2px;
+
+  color: white;
+  font-size: 14px;
+  font-weight: bold;
+  margin-right: 15px;
+  border-radius: 5px;
+  text-align: center;
+}
+.switch-lang:hover {
+  background-color: white;
+  color: black;
+  transition: all 0.3s;
+}
+
+.header-right ul {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.header-right ul li {
+  margin: 0 10px;
+}
+
+.header-right ul li a {
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+}
+
+.dropDown {
+  display: none;
+  position: absolute;
+  width: 150px;
+  height: 200px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+}
+
+.nav-menu ul li:hover .dropDown {
+  display: block;
+  opacity: 1;
+  visibility: visible;
+}
+.dropDown ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1px;
+  margin: 0px;
+  padding: 0;
+}
+
+.dropDown ul li {
+  margin: 0;
+  padding: 3px;
+  margin-bottom: 8px;
+}
+
+.dropDown ul li a {
+  font-size: 13px;
+  padding: 10px;
+  color: black;
+  display: block;
+}
+.dropDown1 {
+  display: none;
+  position: absolute;
+  width: 150px;
+  height: 200px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+}
+
+.nav-menu ul li:hover .dropDown1 {
+  display: block;
+  opacity: 1;
+  visibility: visible;
+}
+.dropDown1 ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1px;
+  margin: 0px;
+  padding: 0;
+}
+
+.dropDown1 ul li {
+  margin: 0;
+  padding: 3px;
+  margin-bottom: 8px;
+}
+
+.dropDown1 ul li a {
+  font-size: 13px;
+  padding: 10px;
+  color: black;
+  display: block;
+}
+.dropDown2 {
+  display: none;
+  position: absolute;
+  width: 150px;
+  height: 45px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+}
+
+.nav-menu ul li:hover .dropDown2 {
+  display: block;
+  opacity: 1;
+  visibility: visible;
+}
+.dropDown2 ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1px;
+  margin: 0px;
+  padding: 0;
+}
+
+.dropDown2 ul li {
+  margin: 0;
+  padding: 3px;
+  margin-bottom: 8px;
+}
+
+.dropDown2 ul li a {
+  font-size: 13px;
+  padding: 10px;
+  color: black;
+  display: block;
+}
+.dropDown3 {
+  display: none;
+  position: absolute;
+  width: 150px;
+  height: 200px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+}
+
+.nav-menu ul li:hover .dropDown3 {
+  display: block;
+  opacity: 1;
+  visibility: visible;
+}
+.dropDown3 ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1px;
+  margin: 0px;
+  padding: 0;
+}
+
+.dropDown3 ul li {
+  margin: 0;
+  padding: 3px;
+  margin-bottom: 8px;
+}
+
+.dropDown3 ul li a {
+  font-size: 13px;
+  padding: 10px;
+  color: black;
+  display: block;
+}
+.search-box {
+  z-index: 10;
+  position: fixed;
+  top: 70px;
+  display: inline-block;
+}
+
+.search-icon {
+  position: absolute;
+  left: 190px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 16px;
+  height: 16px;
+}
+
+.search-box input {
+  width: 1312px;
+  height: 30px;
+  padding: 8px 12px 8px 210px;
+  border: 1px solid #ccc;
+  font-size: 14px;
+  outline: none;
+}
+
+/* Footer */
+.footer{
   width: 100%;
-  height: 307px;
-  background-color: #03243f;
+  height: 327px;
+  background-color: #03243F;
+  margin-top: 30px;
+}
+
+.footer-info{
+  display: flex;
+  text-align: center;
+  justify-content: center;
 }
 
 #brand {
@@ -78,13 +361,25 @@ body {
 }
 .sections {
   margin-top: 70px;
-  margin-left: 40px;
+  margin-left: 20px;
   padding: 0 10px;
 }
 
-.sections div {
-  width: 245px;
-  height: 147px;
+.footer-contact{
+  display: flex;
+}
+
+.footer-contact div{
+  margin-left: 20px;
+}
+
+.informations{
+  display: flex;
+}
+
+.informations div {
+  width: 145px;
+  padding-left: 20px;
 }
 
 .sections h2 {
@@ -92,6 +387,7 @@ body {
   color: white;
   font-size: 1.3rem;
   font-weight: 700;
+  text-align: left;
 }
 
 .sections a {
@@ -101,4 +397,184 @@ body {
   font-size: 1rem;
   line-height: 27px;
   font-weight: 400;
+  text-align: left;
+}
+header{
+  display: none;
+}
+
+
+@media only screen and (min-width: 1200px) and (max-width:1400px) {
+  .container {
+    max-width: 1200px;
+  }
+  
+  .circular-progress{    
+    margin-top: -30px;
+  }
+}
+
+@media only screen and (min-width:992px) and (max-width:1200px) {
+  .container {
+    max-width: 992px;
+    width: 95%;
+  }
+  .footer-contact{
+    display: flex;
+    width: 90%;
+    height: 100%;
+  }
+  .footer-contact div{
+    margin-left: 10px;
+  }
+  .sections{
+    margin-left: 10px;
+  }
+  .footer-btn{
+    width: 220px;
+  }
+}
+
+@media only screen and (min-width:768px) and (max-width:992px) {
+  .container {
+    max-width: 768px;
+    width: 90%;
+    padding: 10px;
+  }
+  .footer{
+    height: 630px;
+  }
+  .footer-info{
+    height: 570px;
+  }
+  .footer-brand{
+    display: none;
+  }
+  .footer-contact{
+    display: flex;
+    width: 100%;
+    height: 100%;
+  }
+
+  .footer-contact div{
+    width: 100%;
+    height: 100%;
+  }
+  .informations{
+    display: block;
+    height: 100%;
+  }
+  .informations div{
+    width: 100%;
+    height: 50%;
+    margin-top: 15px;    
+    text-align: left;
+  }
+  .sections h2{
+    font-size: 2rem;
+    line-height: 37px;
+    text-align: left;
+  }
+  .sections a{
+    font-size: 1.9rem;
+    line-height: 37px;
+    text-align: left;
+  }
+}
+
+@media only screen and (min-width:576px) and (max-width:768px) {
+  .container {
+    max-width: 576px;
+    width: 85%;
+    padding: 8px;
+  }
+  .footer{
+    height: 650px;
+  }
+  .footer-info{
+    height: 98%;
+  }
+  .footer-brand{
+    display: none;
+  }
+  .footer-contact{
+    display: flex;
+    width: 100%;
+    height: 100%;
+  }
+
+  .footer-contact div{
+    width: 100%;
+    height: 100%;
+  }
+  .informations{
+    display: block;
+    height: 100%;
+    width: 50%;
+  }
+  .informations div{
+    width: 100%;
+    height: 50%;
+    margin-top: 35px;    
+    text-align: left;
+  }
+  .sections{
+    width: 100%;
+  }
+  .sections h2{
+    font-size: 1.9rem;
+    line-height: 35px;
+    text-align: left;
+  }
+  .sections a{
+    font-size: 1.8rem;
+    line-height: 35px;
+    text-align: left;
+  }
+  
+}
+
+@media only screen and (max-width:576px) {
+  .container {
+    max-width: 568px;
+    width: 75%;
+    padding: 6px;
+  }
+  .footer{
+    height: 790px;
+  }
+  .footer-info{
+    width: 100%;
+    height: 100vh;
+    margin: 0 auto;
+    text-align: left;
+    justify-content: left;
+  }
+  .footer-brand{
+    display: none;
+  }
+  .footer-contact{
+    display: block;
+    text-align: center;
+    width: 70%;
+  }
+  .informations{
+    display: block;
+  }
+  .informations div{
+    width: 100%;
+    margin-top: 20px;
+  }
+
+  .sections{
+    margin-top: 10px;
+  }
+  .sections h2{
+    font-size: 1.8rem;
+    width: 100%;
+  }
+  .sections a{
+    font-size: 1.5rem;
+    width: 100%;
+  }
 }
