--- a/css/style.css
+++ b/css/style.css
@@ -41,14 +41,6 @@ header {
   font-size: 16px;
 }
 
-.header-right {
-  display: flex;
-  align-items: center;
-  position: absolute;
-  left: 900px;
-  top: 22px;
-}
-
 .header-right img {
   width: 25px;
   margin: 0 10px;
@@ -60,7 +52,6 @@ header {
   width: 24px;
   height: 20px;
   padding: 2px;
-
   color: white;
   font-size: 14px;
   font-weight: bold;
@@ -489,7 +480,6 @@ header {
   margin-left: 20px;
 }
 
-
 /* banner */
 .banner {
   width: 100%;
@@ -554,14 +544,14 @@ header {
   padding-left: 20px;
 }
 
-.left{
+.left {
   margin-left: 10px;
 }
 .Peoples img {
   border-radius: 50%;
 }
 
-.listWriters{
+.listWriters {
   margin-left: 10px;
 }
 
@@ -569,11 +559,11 @@ header {
   font-size: 25px;
 }
 
-.BlueStick{
+.BlueStick {
   align-items: center;
 }
 
-.sticks{
+.sticks {
   margin: 15px 0 0 25px;
 }
 
@@ -585,12 +575,12 @@ header {
   margin-right: 5px;
 }
 
-.sticks p{
+.sticks p {
   margin: 5px;
-  font-size: .7rem;
+  font-size: 0.7rem;
 }
 
-.RedStick{
+.RedStick {
   align-items: center;
 }
 
@@ -602,56 +592,56 @@ header {
   margin-right: 5px;
 }
 
-.person{
+.person {
   margin-top: 15px;
 }
 
-.person img{
+.person img {
   width: 60px;
   height: 60px;
 }
 
-.person-rate{
+.person-rate {
   margin-left: 15px;
 }
 
-.person_name{
+.person_name {
   font-weight: 600;
   font-size: 1.2em;
   margin: 0;
 }
 
-.greenOne{
+.greenOne {
   align-items: center;
 }
 
-.greenOne p{
+.greenOne p {
   margin: 0;
-  font-size: .9em;
+  font-size: 0.9em;
   font-weight: bold;
 }
 
-.redOne{
+.redOne {
   align-items: center;
 }
 
-.redOne p{
+.redOne p {
   margin: 0;
-  font-size: .9em;
+  font-size: 0.9em;
   font-weight: bold;
 }
 
-.person_Green{
+.person_Green {
   width: calc(var(--value) * 0.0024px);
   height: 7px;
   border-radius: 20px;
-  background-image: linear-gradient(to right,#BDFDCE, #25D7AB);
+  background-image: linear-gradient(to right, #bdfdce, #25d7ab);
   margin: 0;
 }
 
-.person_Red{
+.person_Red {
   width: calc(var(--value) * 0.032px);
   height: 7px;
   border-radius: 20px;
-  background-image: linear-gradient(to right,#FDC070, #DA3E63);
+  background-image: linear-gradient(to right, #fdc070, #da3e63);
 }
