--- a/css/main.css
+++ b/css/main.css
@@ -1,28 +1,29 @@
 * {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
   margin: 0;
   padding: 0;
   cursor: pointer;
-  font-family: 'Source Sans Pro', Arial, sans-serif;
+  font-family: "Source Sans Pro", Arial, sans-serif;
 }
 
-body::-webkit-scrollbar{
-  width: 8px; 
+body::-webkit-scrollbar {
+  width: 8px;
 }
 
-body::-webkit-scrollbar-thumb{
+body::-webkit-scrollbar-thumb {
   background-color: #44444454;
-  border-radius: 4px; 
+  border-radius: 4px;
 }
 
 .container {
   max-width: 1300px;
   margin: 0 auto;
   width: 100%;
-  padding: 12px;
+  padding: 0 12px;
 }
 
 .flex {
@@ -50,7 +51,7 @@ body::-webkit-scrollbar-thumb{
 
 .percentage {
   color: #fff;
-  font-size: 22px;
+  font-size: 14px;
   font-weight: bold;
 }
 
@@ -69,7 +70,6 @@ header {
   width: 97.4%;
   height: 70px;
   background-color: #0b2c48;
-  padding: 0 20px;
   z-index: 10;
 }
 .logo img {
@@ -323,14 +323,14 @@ header {
 }
 
 /* Footer */
-.footer{
+.footer {
   width: 100%;
-  background-color: #03243F;
+  background-color: #03243f;
   margin-top: 30px;
   padding-bottom: 20px;
 }
 
-.footer-info{
+.footer-info {
   display: flex;
   text-align: center;
   justify-content: center;
@@ -364,20 +364,20 @@ header {
   padding: 0 10px;
 }
 
-.footer-contact{
+.footer-contact {
   display: flex;
 }
 
-.footer-contact div{
+.footer-contact div {
   margin-left: 20px;
 }
 
-.informations{
+.informations {
   display: flex;
 }
 
 .informations div {
-  width: 145px;
+  /* width: 145px; */
   padding-left: 20px;
 }
 
@@ -398,158 +398,132 @@ header {
   font-weight: 400;
   text-align: left;
 }
-header{
-  display: none;
-}
 
-
-@media only screen and (min-width: 1200px) and (max-width:1400px) {
-  .container {
-    max-width: 1200px;
-  }
-  
-  .circular-progress{    
+@media only screen and (min-width: 1200px) and (max-width: 1400px) {
+  .circular-progress {
     margin-top: -30px;
   }
 }
 
-@media only screen and (min-width:992px) and (max-width:1200px) {
-  .container {
-    max-width: 992px;
-    width: 95%;
-  }
-  .footer-contact{
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+  .footer-contact {
     display: flex;
     width: 90%;
     height: 100%;
   }
-  .footer-contact div{
+  .footer-contact div {
     margin-left: 10px;
   }
-  .sections{
+  .sections {
     margin-left: 10px;
   }
-  .footer-btn{
+  .footer-btn {
     width: 220px;
   }
 }
 
-@media only screen and (min-width:768px) and (max-width:992px) {
-  .container {
-    max-width: 768px;
-    width: 90%;
-    padding: 10px;
-  }
-  .footer-brand{
+@media only screen and (min-width: 768px) and (max-width: 992px) {
+  .footer-brand {
     display: none;
   }
-  .footer-contact{
+  .footer-contact {
     display: flex;
     width: 100%;
   }
 
-  .footer-contact div{
+  .footer-contact div {
     width: 100%;
   }
-  .informations{
+  .informations {
     display: block;
   }
-  .informations div{
+  .informations div {
     width: 100%;
-    margin-top: 15px;    
+    margin-top: 15px;
     text-align: left;
   }
-  .sections h2{
+  .sections h2 {
     font-size: 2rem;
     line-height: 37px;
     text-align: left;
   }
-  .sections a{
+  .sections a {
     font-size: 1.9rem;
     line-height: 37px;
     text-align: left;
   }
 }
 
-@media only screen and (min-width:576px) and (max-width:768px) {
-  .container {
-    max-width: 576px;
-    width: 85%;
-    padding: 8px;
-  }
-  
-  .footer-brand{
+@media only screen and (min-width: 576px) and (max-width: 768px) {
+  .footer-brand {
     display: none;
   }
-  .footer-contact{
+  .footer-contact {
     display: flex;
     width: 100%;
   }
 
-  .footer-contact div{
+  .footer-contact div {
     width: 100%;
   }
-  .informations{
+  .informations {
     display: block;
     width: 50%;
   }
-  .informations div{
+  .informations div {
     width: 100%;
-    margin-top: 35px;    
+    margin-top: 35px;
     text-align: left;
   }
-  .sections{
+  .sections {
     width: 100%;
   }
-  .sections h2{
+  .sections h2 {
     font-size: 1.8rem;
     line-height: 35px;
     text-align: left;
   }
-  .sections a{
+  .sections a {
     font-size: 1.7rem;
     line-height: 35px;
     text-align: left;
-  }  
+  }
 }
 
-@media only screen and (max-width:576px) {
-  .container {
-    max-width: 568px;
-    width: 75%;
-    padding: 6px;
-  }
-  .footer-info{
+@media only screen and (max-width: 576px) {
+  .footer-info {
     width: 100%;
     margin: 0 auto;
     text-align: left;
     justify-content: left;
   }
-  .footer-brand{
+  .footer-brand {
     display: none;
   }
-  .footer-contact{
+  .footer-contact {
     display: block;
     text-align: center;
     width: 70%;
   }
-  .informations{
+  .informations {
     display: block;
   }
-  .informations div{
+  .informations div {
     width: 100%;
     margin-top: 20px;
   }
 
-  .sections{
+  .sections {
     margin-top: 10px;
   }
-  .sections h2{
+  .sections h2 {
     font-size: 1.8rem;
     width: 100%;
   }
-  .sections a{
+  .sections a {
     font-size: 1.5rem;
     width: 100%;
   }
 }
+
+
