--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@ body {
 header {
   width: 100%;
   height: 70px;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -327,7 +326,6 @@ header {
   gap: 16px;
   padding: 16px;
   overflow-x: auto;
-  scroll-behavior: smooth;
   background: url(/images/trending-bg-39afc2a5f77e31d469b25c187814c0a2efef225494c038098d62317d923f8415.svg)
     no-repeat center bottom;
   
@@ -409,8 +407,7 @@ header {
   display: flex;
   gap: 16px;
   padding: 12px 16px 15px 16px;
-  overflow-x: auto;
-  scroll-behavior: smooth;
+  overflow-x: scroll;
   height: 100%;
 }
 
@@ -685,7 +682,6 @@ header {
     width: calc(var(--value) * 0.029px);
   }
 }
-
 @media only screen and (min-width:992px) and (max-width:1200px) {
   .movies-carusel,
   .movies-carusel-2,
@@ -706,7 +702,6 @@ header {
     margin: 10px 0 0 100px;
   }
 }
-
 @media only screen and (min-width:768px) and (max-width:992px) {
   .movies-carusel,
   .movies-carusel-2,
@@ -734,7 +729,6 @@ header {
   }
 
 }
-
 @media only screen and (min-width:576px) and (max-width:768px) {
   .movies-carusel,
   .movies-carusel-2,
@@ -816,8 +810,7 @@ header {
     font-size: 1.2rem;
   }
 }
-
-@media only screen and (max-width:576px) {
+@media only screen and (min-width:374px) and (max-width:576px) {
   .movies-carusel,
   .movies-carusel-2,
   .videos-carusel{
@@ -828,7 +821,6 @@ header {
     display: block;
     overflow-y: auto;
     height: 300px;
-    overflow: hidden;
   }
   .card,
   .card-video {
@@ -891,5 +883,51 @@ header {
   }
   .sections a{
     font-size: 1.2rem;
+  }
+}
+@media only screen and (max-width: 374px){
+  .trend{
+    display: block;
+    text-align: center;
+  }
+
+  .video-list{
+    gap: 5px;
+    padding: 0;
+  }
+
+  .button-group{
+    width: 230px;
+    margin: 0 auto;
+  }
+  .movie-list,
+  .video-list{
+    overflow-x: scroll;
+  }
+  #card-img,
+  #video-img{
+    height: 165px;
+  }
+  #video-img{
+    width: 220px;
+  }
+  .circular-progress {
+    width: 30px;
+    height: 30px;
+    margin-left: 10px;
+  }
+  
+  .percentage {
+    font-size: 12px;
+  }
+  .left{
+    padding: 0;
+    margin: 0;
+  }
+  .person_Green{
+    width: calc(var(--value) * 0.0006px);
+  }  
+  .person_Red{
+    width: calc(var(--value) * 0.009px);
   }
 }
